# data_structures_and_algorithms_in_rust

./: Cargo.toml
src/: lib.rs  main.rs
src/data_structures_1/: circular_queue.rs  deque.rs  mod.rs  priority_queue.rs  queue.rs  stack.rs
src/data_structures_2/: heap.rs  linked_list.rs  mod.rs
src/greedy_algs/: dijkstra.rs  mod.rs
src/other_algs/: fun.rs
src/sorting_and_searching_algs/: quick_sort.rs
src/tree_based_dsa_1/: complete_binary_trie.rs  mod.rs
