[package]
name = "dsa"
version = "0.1.0"
edition = "2021"
author = "Raman Shariati"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
tokio = { version = "0.3", features = [
    "io-util",
    "io-std",
    "stream",
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
] }
serde = { version = "=1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"

chrono = "0.4"
sha2 = "0.9.8"

hex = "0.4"
